--- a/index.html
+++ b/index.html
@@ -186,7 +186,12 @@ layout: master
 					<div class="image--cover-container">
 						<img src="/images/people/mina_faridi.jpg" class="image--cover">
 						<p>Mina Faridi</p>
-					</div>					
+					</div>		
+
+					<div class="image--cover-container">
+						<img src="/images/people/abedi.png" class="image--cover">
+						<p>Hossein Abedi</p>
+					</div>						
                 </div>
             </div>
         </div>
