--- a/index.html
+++ b/index.html
@@ -10,103 +10,61 @@ layout: master
 
 
     <ul>
-<!-- 
-		<li class="no-p-margin">
-            2023-01-10:  Lectures 13 was released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
-            <p></p>
 
-        </li>
 		<li class="no-p-margin">
-            2023-01-01: Project Final was released. Check [<a href="/projects" target="_blank">PROJECTS</a>].
-            <p></p>
-
-        </li>
-		<li class="no-p-margin">
-            2022-12-31: Lectures 12 was released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
+            2024-01-07: Homework 5 was released. Check [<a href="/assignments" target="_blank">ASSIGNMENTS</a>].
             <p></p>
 
         </li>	
 		<li class="no-p-margin">
-            2022-12-25: Lectures 11 was released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
+            2023-12-23: Paper Review 4 was released. Check [<a href="https://elearn.ut.ac.ir" target="_blank">ELEARN</a>].
             <p></p>
-
+			
         </li>			
 		<li class="no-p-margin">
-            2022-12-18: Lectures 10 was released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
+            2023-12-09: Paper Review 3 was released. Check [<a href="https://elearn.ut.ac.ir" target="_blank">ELEARN</a>].
             <p></p>
-
+			
         </li>			
 		<li class="no-p-margin">
-            2022-12-11: Lectures 9 was released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
+            2023-12-03: Homework 4 was released. Check [<a href="/assignments" target="_blank">ASSIGNMENTS</a>].
             <p></p>
-
-        </li>			
-		<li class="no-p-margin">
-            2022-12-09: Homework 4 was released. Check [<a href="/assignments" target="_blank">ASSIGNMENTS</a>].
-            <p></p>
-
-        </li>
-		<li class="no-p-margin">
-            2022-12-04: Lectures 8 was released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
-            <p></p>
-
+			
         </li>		
 		<li class="no-p-margin">
-            2022-11-29: A Quiz on Sunday, December 18 will be held. Check [<a href="https://elearn.ut.ac.ir" target="_blank">ELEARN</a>].
+            2023-11-26: Project 2 was released. Check [<a href="/projects" target="_blank">PROJECTS</a>].
             <p></p>
-
-        </li>
-		-->
-
+		
+        </li>		
+		<li class="no-p-margin">
+            2023-11-14: Paper Review 2 was released. Check [<a href="https://elearn.ut.ac.ir" target="_blank">ELEARN</a>].
+            <p></p>
+			
+        </li>	
 		<li class="no-p-margin">
             2023-11-11: Homework 3 was released. Check [<a href="/assignments" target="_blank">ASSIGNMENTS</a>].
             <p></p>
 
-        </li>
-		
-		<li class="no-p-margin">
-            2023-11-10: Lectures 9 was released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
-            <p></p>
-
-        </li>		
-	
-		<li class="no-p-margin">
-            2023-10-29: Lectures 7 & 8 were released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
-            <p></p>
-
-        </li>		
+        </li>			
 		<li class="no-p-margin">
             2023-10-28: Project 1 was released. Check [<a href="/projects" target="_blank">PROJECTS</a>].
             <p></p>
 
         </li>		
 		<li class="no-p-margin">
-            2023-10-22: Lectures 6 was released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
-            <p></p>
-
-        </li>	
-		<li class="no-p-margin">
             2023-10-22: Homework 2 was released. Check [<a href="/assignments" target="_blank">ASSIGNMENTS</a>].
             <p></p>
-        </li>		
-		<li class="no-p-margin">
-            2023-10-17: Lectures 5 was released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
-            <p></p>
-
-        </li>	
+			
+        </li>			
 		<li class="no-p-margin">
             2023-10-17: Project 0 and Homework 1 were extended. Check [<a href="/assignments" target="_blank">ASSIGNMENTS</a>].
             <p></p>
 
         </li>			
 		<li class="no-p-margin">
-            2023-10-15: Lecture 4 was released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
-            <p></p>
-
-        </li>
-		<li class="no-p-margin">
             2023-10-14: Paper Review 1 was released. Check [<a href="https://elearn.ut.ac.ir" target="_blank">ELEARN</a>].
             <p></p>
+			
         </li>				
 		<li class="no-p-margin">
             2023-10-08: Homework 1 was released. Check [<a href="/assignments" target="_blank">ASSIGNMENTS</a>].
@@ -114,25 +72,9 @@ layout: master
 
         </li>
 		<li class="no-p-margin">
-            2023-10-08: Lectures 2 & 3 were released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
-            <p></p>
-
-        </li>
-		<li class="no-p-margin">
             2023-10-07: Project 0 was released. Check [<a href="/projects" target="_blank">PROJECTS</a>].
             <p></p>
 		
-        </li>
-		<li class="no-p-margin">
-            2023-10-01: Lecture 1 was released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
-            <p></p>
-
-        </li>
-		
-		<li class="no-p-margin">
-            2023-09-27: Lecture 0 was released. Check [<a href="/lectures" target="_blank">LECTURES</a>].
-            <p></p>
-
         </li>
 		<li class="no-p-margin">
             2023-09-27: Skype group link was released in [<a href="https://elearn.ut.ac.ir" target="_blank">ELEARN</a>].
