--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ layout: master
 					</div>
 							
 					<div class="image--cover-container">
-						<img src="/images/people/mm.jpg" class="image--cover">
+						<img src="/images/people/default.png" class="image--cover">
 						<p>Mojtaba Mozhganfar</p>
 					</div>
 					
